apps/website/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website
  namespace: default
  labels:
    app: website
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: website
  sessionAffinity: None
  type: ClusterIP
