apps/website/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: website
  namespace: default
  labels:
    app: website
spec:
  parentRefs:
  - kind: Gateway
    namespace: gateway-infra
    name: gateway
  hostnames:
  - ch.tudelft.nl
  - www.ch.tudelft.nl
  rules:
  - backendRefs:
    - name: website
      port: 80
  - matches:
    - path:
        value: "/choice2"
    backendRefs:
    - name: choice
      port: 80
